# Programming-Work-WordBook

./: CMakeLists.txt  README.md
resource/: users.txt
resource/WordBook/: asd.txt  q.txt  w.txt
src/: main.cpp
src/entity/: Customer.cpp  Customer.h  Word.cpp  Word.h
src/homePage/: Login.cpp  Login.h  Register.cpp  Register.h  UserData.cpp  UserData.h
src/memorizeWord/: BlankQ.cpp  BlankQ.h  ChoiceQ.cpp  ChoiceQ.h  QModel.cpp  QModel.h
src/wordOperator/: AddMeaning.cpp  AddMeaning.h  AddWord.cpp  AddWord.h  DeleteWord.cpp  DeleteWord.h  ModifyWord.cpp  ModifyWord.h  ViewWords.cpp  ViewWords.h
